<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.shayne.mlh.grade_edit">

    <EditText
        android:id="@+id/grade_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toEndOf="@+id/grade_label"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/grade_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="116dp"
        android:text="@string/grade_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:clickable="true"
        android:text="@string/save_button"
        app:layout_constraintEnd_toEndOf="@+id/grade_val"
        app:layout_constraintTop_toBottomOf="@+id/grade_val" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:text="@string/cancel_button"
        app:layout_constraintStart_toStartOf="@+id/grade_val"
        app:layout_constraintTop_toTopOf="@+id/save_button" />
</android.support.constraint.ConstraintLayout>
