<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="center"
    tools:context="com.example.shayne.mlh.AddClass"
    tools:layout_editor_absoluteY="25dp">

    <TextView
        android:id="@+id/textHeader"
        android:layout_width="133dp"
        android:layout_height="0dp"
        android:layout_marginBottom="52dp"
        android:layout_marginTop="16dp"
        android:text="@string/header"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textCourse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textCourse"
        android:layout_width="159dp"
        android:layout_height="42dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="16dp"
        android:text="@string/courseName"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/inputCourse"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textHeader" />

    <EditText
        android:id="@+id/inputCourse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="42dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/buttonAdd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textCourse" />

    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="277dp"
        android:layout_marginStart="132dp"
        android:onClick="ButtonOnClick"
        android:text="@string/buttonAdd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/inputCourse"
        app:layout_constraintTop_toBottomOf="@+id/inputCourse" />
</android.support.constraint.ConstraintLayout>
